Button Color And Navigation Header Changed

--- a/app/src/main/res/layout/activity_select_view_attendance_date.xml
+++ b/app/src/main/res/layout/activity_select_view_attendance_date.xml
@@ -73,7 +73,7 @@
             android:layout_margin="8dp"
             android:background="@drawable/spinnerbg"
             android:text="View Attendance"
-            android:textColor="#070707" />
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/btnCollectiveAttendance"
@@ -82,7 +82,7 @@
             android:layout_margin="8dp"
             android:background="@drawable/spinnerbg"
             android:text="Collective Attendance"
-            android:textColor="#070707" />
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
