--- a/app/src/main/res/layout/singlerowqueries.xml
+++ b/app/src/main/res/layout/singlerowqueries.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="7dp"
-    android:elevation="5dp"
-    android:padding="3dp"
+    app:cardCornerRadius="10dp"
+    android:padding="5dp"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
     app:cardUseCompatPadding="true">
 
     <de.hdodenhof.circleimageview.CircleImageView
