--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,15 +14,15 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.IIMTUFacultyNoAction" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.IIMTUStudentAction" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#E8AFAF</item>
-        <item name="colorPrimaryVariant">#F0E4F8</item>
+        <item name="colorPrimary">#0191E0</item>
+        <item name="colorPrimaryVariant">#1D7CDE</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/purple_200</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
