Student Details Updated

--- a/app/src/main/res/layout/activity_queries.xml
+++ b/app/src/main/res/layout/activity_queries.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgactivity"
+    android:background="@color/light_white_bg"
     tools:context=".Activity.Queries.QueriesActivity">
 
     <TextView
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Resolve Student Queries"
+        android:textSize="25sp"
         android:textColor="#000000"
-        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -24,7 +24,7 @@
     <View
         android:id="@+id/view2"
         android:layout_width="300dp"
-        android:layout_height="5dp"
+        android:layout_height="7dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/round_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
 
     <View
         android:layout_width="300dp"
-        android:layout_height="5dp"
+        android:layout_height="7dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/round_button"
         app:layout_constraintBottom_toTopOf="@+id/rcQueries"
