--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -90,7 +90,7 @@
         android:background="@drawable/buttonbg"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Send OTP"
+        android:text="Send Link"
         android:textColor="#fff"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
