--- a/app/src/main/res/layout/dialogstudent.xml
+++ b/app/src/main/res/layout/dialogstudent.xml
@@ -3,16 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
-
 
     <TextView
         android:layout_width="match_parent"
@@ -39,38 +35,6 @@
         android:layout_marginTop="10dp"
         android:textSize="20sp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Roll"
-        android:id="@+id/updRollNumberStudent"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Admission"
-        android:id="@+id/updAdmissionNumberStudent"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enrollment"
-        android:id="@+id/updEnrollmentNumberStudent"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Branch"
-        android:id="@+id/updBranchStudent"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"/>
-
 
     <EditText
         android:layout_width="match_parent"
@@ -88,7 +52,7 @@
             android:padding="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:text="Update Student"
+            android:text="Update Deatils"
             android:id="@+id/updBtnStudent"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
