--- a/app/src/main/res/layout/singlerowcollectiveattendance.xml
+++ b/app/src/main/res/layout/singlerowcollectiveattendance.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -25,63 +24,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="1dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <RelativeLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="0dp"
-                        android:padding="5dp"
-                        android:text="Name:"
-                        android:textColor="#0A7BDD"
-                        android:textSize="20sp" />
+                    android:layout_weight="2">
 
                     <TextView
                         android:id="@+id/attendanceStudentName"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:text="Hitesh Kumar"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:textStyle="normal" />
+                        android:padding="2dp"
+                        android:text="Name"
+                        android:textColor="#514B4B"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
-                </LinearLayout>
+                </RelativeLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="0dp"
-                        android:padding="5dp"
-                        android:text="Roll Number:"
-                        android:textColor="#0A7BDD"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/enno_input_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:text="Hitesh Kumar"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:textStyle="normal" />
-
-                </LinearLayout>
 
             </LinearLayout>
 
@@ -91,6 +52,23 @@
                 android:layout_height="wrap_content"
                 android:padding="1dp"
                 android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2">
+
+                    <TextView
+                        android:id="@+id/enno_input_tv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="2dp"
+                        android:text="Roll Number:"
+                        android:textColor="#514B4B"
+                        android:textSize="20dp"
+                        android:textStyle="normal" />
+
+                </RelativeLayout>
 
 
             </LinearLayout>
@@ -111,7 +89,7 @@
                         android:layout_height="wrap_content"
                         android:padding="4dp"
                         android:text="Attendance:"
-                        android:textColor="#0A7BDD"
+                        android:textColor="#514B4B"
                         android:textSize="18sp" />
 
                 </RelativeLayout>
@@ -126,9 +104,9 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:text="00/10"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:textStyle="normal" />
+                        android:textSize="19dp"
+                        android:textColor="#070707"
+                        android:textStyle="bold" />
 
                 </RelativeLayout>
 
@@ -142,8 +120,8 @@
                         android:layout_height="wrap_content"
                         android:padding="4dp"
                         android:text="Absent:"
-                        android:textColor="#0A7BDD"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textColor="#514B4B" />
 
                 </RelativeLayout>
                 <RelativeLayout
@@ -157,9 +135,9 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:text="0"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:textStyle="normal" />
+                        android:textSize="19dp"
+                        android:textColor="#070707"
+                        android:textStyle="bold" />
 
                 </RelativeLayout>
 
@@ -184,8 +162,8 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:text="Percentage:"
-                        android:textColor="#0A7BDD"
-                        android:textSize="19sp" />
+                        android:textSize="18sp"
+                        android:textColor="#514B4B" />
 
                 </RelativeLayout>
 
@@ -200,8 +178,8 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:text="0.00%"
+                        android:textSize="19dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                 </RelativeLayout>
